@@ -1,4 +1,4 @@
-#!@@USERS@@
+#!@@PERL@@
 #
 # (c) 2004 Michael Kaiser
 # tools (at) micha (dot) de
@@ -21,6 +21,9 @@
 # $Id$
 #
 # $Log$
+# Revision 1.2  2005/01/24 17:25:39  jimmyo
+# Made TLS mode work.
+#
 # Revision 1.1  2004/12/20 13:43:36  jimmyo
 # Added plugin linux/users, created by Michael Kaiser.
 #
