@@ -3,6 +3,7 @@ munin (work)
   * Main: Fix bug with calculation of "Avg:" field when using graph_sums.
   * Main/Node: Added support for TLS.
   * Installation: Make the single python plugin use @@PYTHON@@ again.
+  * Plugin: linux/users now has proper hashbang.
 
 munin (1.3.0)
 
